# gemmabot

./: .env.example  .gitignore  DEMO_SCRIPT.md  DEMO_SCRIPT_60S.md  Dockerfile  HACKATHON_RULES.md  OVERNIGHT_PLAN.md  README.md  _update_sam_perceptor.py  benchmark_results.json  demo-video-script.md  pyproject.toml  render.yaml  requirements.txt  run.sh  run_demo.sh  run_web.sh  test_live_router.py  test_multi_image.py
docs/research/: 01-gemma4-capabilities.md  02-multi-agent-architectures.md  03-idea-brainstorm.md  04-speed-architecture.md  05-strategy.md  06-enterprise-use-cases.md  (+12 more)
robot_video/: __init__.py  action_comparator.py  action_mapper.py  compare_speed.py  control_pusht.py  demo_pusht.py  frame_loader.py  pusht_controller.py  replay_engine.py  run_pipeline.py
scripts/: _sample_conversations.py  adversarial_test.py  benchmark.py  build_demo_v2.py  build_demo_v3.py  build_demo_v4.py  build_demo_video.py  build_final.py  compare_cerebras_openrouter.py  exp_background.py  exp_blank_control.py  exp_blind_vision.py  exp_chaos.py  exp_chaos_timeout.py  exp_chaos_v2.py  exp_gauntlet.py  exp_high_count.py  exp_mixed_sizes.py  exp_multistep.py  exp_no_gripper.py  exp_occlusion.py  exp_perturb.py  exp_proximity.py  exp_relational.py  exp_relational_clean.py  exp_stateful_chaos.py  exp_vision.py  exp_zone_boundary.py  full_task_demo.py  live_dashboard.py  loop_runner.py  make_compare_chart.py  make_hero_chart.py  measure_robot_decision.py  nocheat_demo.py  overnight.py  overnight.sh  overnight_optimizer.py  overnight_runner.py  perception_eval.py  (+12 more)
src/: __init__.py  benchmark.py  client.py  config.py  demo.py  orchestrator.py  provider.py  provider_router.py  robot_controller.py
ztp_integration/: README.md
(+56 files in other folders)
