# TODO: configuration

[project]
name = "cerebras-gemma4-hackathon"
version = "0.1.0"
description = "Multi-agent robotics demo using Gemma 4 31B on Cerebras ultra-fast inference"
requires-python = ">=3.11"
dependencies = [
    "cerebras-cloud-sdk>=1.67.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "numpy>=2.4.6",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.2.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
]

[project.urls]
Homepage = "https://github.com/your-org/cerebras-gemma4-hackathon"
Repository = "https://github.com/your-org/cerebras-gemma4-hackathon"

[tool.setuptools.packages.find]
where = ["src"]

